.k8s/production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: external-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - host: evolytes.com
    http:
      paths:
      - backend:
          service:
            name: evolytes-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: www.evolytes.com
    http:
      paths:
      - backend:
          service:
            name: evolytes-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: api.evolytes.com
    http:
      paths:
      - backend:
          service:
            name: evolytes-api
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - evolytes.com
    - api.evolytes.com
    - www.evolytes.com
    secretName: evolyte-com-tls-2022
