.k8s/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: minimal-ingress
  namespace: evolyte-dev
spec:
  ingressClassName: nginx
  rules:
  - host: evolytes.io
    http:
      paths:
      - backend:
          service:
            name: evolyte-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: www.evolytes.io
    http:
      paths:
      - backend:
          service:
            name: evolyte-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: api.evolytes.io
    http:
      paths:
      - backend:
          service:
            name: evolyte-api
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - evolytes.io
    - api.evolytes.io
    - www.evolytes.io
    secretName: evolyte-io-tls-2022
